--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
 <body>
   <main>
-
     <section class="image-section">
       <img class="article-image" src="/assets/images/drawers.jpg" alt="Green Drawers">
     </section>
@@ -28,20 +27,32 @@
         it felt slightly bare and uninviting. I’ve got some simple tips 
         to help you make any room feel complete.
       </p>
-      <div class="article-footer">
-        <div class="user">
-          <img class="user-avatar" src="/assets/images/avatar-michelle.jpg" alt="Michelle's Avatar">
-          <div class="name-postdate">
-            <p class="user-name">Michelle Appleton</p>
-            <p class="user-postdate">28 Jun 2020</p>
-          </div>
-        </div>
-        <button class="share-button"><img class="share-icon" src="assets/images/icon-share.svg" alt="Share Icon"></button>
-     </div>
     </section>
 
+    <section class="footer">
+      <div class="article-footer">
+            <div class="user">
+              <img class="user-avatar" src="/assets/images/avatar-michelle.jpg" alt="Michelle's Avatar">
+              <div class="name-postdate">
+                <p class="user-name">Michelle Appleton</p>
+                <p class="user-postdate">28 Jun 2020</p>
+              </div>
+            </div>
+        <div class="share-container">
+          <p class="share-label">SHARE</p>
+          <svg class="share-icons" id="fb-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
+            <path fill="#FFF" d="M18.896 0H1.104C.494 0 0 .494 0 1.104v17.793C0 19.506.494 20 1.104 20h9.58v-7.745H8.076V9.237h2.606V7.01c0-2.583 1.578-3.99 3.883-3.99 1.104 0 2.052.082 2.329.119v2.7h-1.598c-1.254 0-1.496.597-1.496 1.47v1.928h2.989l-.39 3.018h-2.6V20h5.098c.608 0 1.102-.494 1.102-1.104V1.104C20 .494 19.506 0 18.896 0z"/>
+          </svg>
+        </div>
+        <button class="share-button">
+          <svg xmlns="http://www.w3.org/2000/svg" width="15" height="13">
+            <path d="M15 6.495L8.766.014V3.88H7.441C3.33 3.88 0 7.039 0 10.936v2.049l.589-.612C2.59 10.294 5.422 9.11 8.39 9.11h.375v3.867L15 6.495z"/>
+          </svg>
+        </button>
+      </div>
+    </section>
   </main>
-   <script src="/assets/js/main.js"></script>
+  <script src="/assets/js/main.js"></script>
 </body>
 </html>
 
