--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/assets/css/styles.css">
+  <link rel="stylesheet" href="assets/css/styles.css">
   
   <title>Frontend Mentor | Article preview component</title>
 
@@ -32,7 +32,7 @@
     <section class="footer">
       <div class="article-footer">
             <div class="user">
-              <img class="user-avatar" src="/assets/images/avatar-michelle.jpg" alt="Michelle's Avatar">
+              <img class="user-avatar" src="assets/images/avatar-michelle.jpg" alt="Michelle's Avatar">
               <div class="name-postdate">
                 <p class="user-name">Michelle Appleton</p>
                 <p class="user-postdate">28 Jun 2020</p>
