--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <main>
     <section class="image-section">
-      <img class="article-image" src="/assets/images/drawers.jpg" alt="Green Drawers">
+      <img class="article-image" src="assets/images/drawers.jpg" alt="Green Drawers">
     </section>
 
     <section class="text-section">
