--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </section>
   </main>
-  <script src="/assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
 
