desktop styling done (no js yet)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <section class="content-container">
 
-      <section class="text-section">
+      <div class="text-section">
         <h1 class="article-header">
           Shift the overall look and feel by adding these wonderful 
           touches to furniture in your home
@@ -29,9 +29,9 @@
           it felt slightly bare and uninviting. I’ve got some simple tips 
           to help you make any room feel complete.
         </p>
-      </section>
+      </div>
 
-      <section class="footer">
+      <div class="footer">
         <div class="article-footer">
               <div class="user">
                 <img class="user-avatar" src="assets/images/avatar-michelle.jpg" alt="Michelle's Avatar">
@@ -60,7 +60,7 @@
             </svg>
           </button>
         </div>
-      </section>
+      </div>
 
   </section>
   </main>
