Finished JS for both mobile and desktop

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                   <p class="user-postdate">28 Jun 2020</p>
                 </div>
               </div>
-          <div class="share-container hidden">
+          <div class="share-container">
             <p class="share-label">SHARE</p>
             <div class="icon-container">
               <svg class="share-icons" id="fb-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20">
